--- a/Pages/Movies/index.cshtml
+++ b/Pages/Movies/index.cshtml
@@ -14,7 +14,8 @@
             <div class="col-sm-6 col-lg-3 px-0 px-sm-2 mb-3 mb-lg-0">
                 <div class="card bg-dark p-0">
                     <div class="card-body">
-                        <h5 class="card-title">#@movie.Id @movie.Title</h5>
+                        <img class="card-img-top" src="/images/@movie.Image" alt="@movie.Title cover" class="img-fluid">
+                        <h5 class="card-title mt-2">#@movie.Id @movie.Title</h5>
                         <p class="card-text">@movie.Genre</p>
                         <p class="card-text">@movie.Description</p>
                         <p class="card-text">€ @movie.Price -,</p>
