--- a/Pages/Movies/Create.cshtml
+++ b/Pages/Movies/Create.cshtml
@@ -9,7 +9,7 @@
 <hr />
 <div class="row">
 
-    <form method="POST" class="col-lg-4 offset-lg-4">
+    <form enctype="multipart/form-data" method="POST" class="col-lg-4 offset-lg-4">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
@@ -34,6 +34,12 @@
                 <label asp-for="Movie.Description" class="control-label"></label>
                 @Html.TextArea("Movie.Description", new { @class = "form-control" })
                 <span asp-validation-for="Movie.Description" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="FileUpload">Image</label>
+                <input type="file" asp-for="FileUpload">
+                <span asp-validation-for="FileUpload"></span>
             </div>
 
             <div class="form-group">
