--- a/Pages/Movies/Edit.cshtml
+++ b/Pages/Movies/Edit.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div class="row">
-    <form method="post" class="col-lg-4 offset-lg-4">
+    <form method="post" enctype="multipart/form-data" class="col-lg-4 offset-lg-4">
         <div asp-validation-summary="ModelOnly"></div>
           <input type="hidden" asp-for="Movie.Id" />
 
@@ -34,6 +34,12 @@
                     <label asp-for="Movie.Description" class="control-label"></label>
                     @Html.TextArea("Movie.Description", new { @class = "form-control" })
                     <span asp-validation-for="Movie.Description" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="FileUpload">Image</label>
+                    <input type="file" asp-for="FileUpload">
+                    <span asp-validation-for="FileUpload"></span>
                 </div>
 
         <div class="form-group">
