--- a/Pages/Reservations/Index.cshtml
+++ b/Pages/Reservations/Index.cshtml
@@ -7,19 +7,22 @@
 <h1 class="text-center">Reservering</h1>
 @{
     var price = 0.0m;
+    int amount = 0;
     // turn price into a decimal
     var day = DateTime.Now.Date;
     @foreach(var viewing in Model.Reservation) {
         // check if it is the current day
         if(viewing.ReservationTime == day){
             // make calculations to get the correct price 
+            amount = viewing.Seats.Count();
             price += viewing.Price;
-            price = price * (decimal)viewing.Seats.Count();
+            price = price * (decimal)amount;
         }
    }  
 }
 
 <h3 class="text-center m-b-30">Inkomsten vandaag:€ @price -, </h3>
+<h3 class="text-center m-b-30">tickets verkocht vandaag: @amount  </h3>
     <form method="post">
         <div class="row text-white px-4">
         @foreach(var viewing in Model.Reservation) {
