--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@inject Auth.AuthChecker auth
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
@@ -11,10 +12,12 @@
             <h1 class="cover__title text-white display-3 font-weight-bold">@Model.UpcomingViewings[0].Movie.Title</h1>
             <p class="text-white">@Model.UpcomingViewings[0].Movie.Title</p>
             <p class="text-white">Start @Model.UpcomingViewings[0].Time</p>
-            <a class="btn btn-primary d-inline-flex align-items-center" href="/Viewings/Reserve?id=@Model.UpcomingViewings[0].Id">
-                Reserve a spot
-                <span class="material-icons ml-2">label_important</span>
-            </a>
+            @if(auth) {
+                <a class="btn btn-primary d-inline-flex align-items-center" href="/Viewings/Reserve?id=@Model.UpcomingViewings[0].Id">
+                    Reserve a spot
+                    <span class="material-icons ml-2">label_important</span>
+                </a>
+            }
         </div>
     </div>
 }
@@ -45,7 +48,9 @@
                             <h3 class="card-title">@viewing.Movie.Title</h3>
                             <p class="card-text">@viewing.Movie.Description</p>
                             <p>Start: @viewing.Time</p>
-                            <a href="/Viewings/Reserve?id=@viewing.Id" class="btn btn-primary">Reserve a spot</a>
+                            @if(auth) {
+                                <a href="/Viewings/Reserve?id=@viewing.Id" class="btn btn-primary">Reserve a spot</a>
+                            }
                         </div>
                     </div>
                 </div>
