--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -90,7 +90,7 @@
                                 @if (auth) {
                                     <a class="dropdown-item" href="/users/edit?id=@auth.User.Id">Profiel</a>
                                     <a class="dropdown-item" href="/logout">Log uit</a>
-                                    <a class="dropdown-item" href="/MyReservation??id=@auth.User.Id">Mijn Reserveringen</a>
+                                    <a class="dropdown-item" href="/MyReservation?id=@auth.User.Id">Mijn Reserveringen</a>
                                 }
                                 @if (!auth) {
                                     <a class="dropdown-item" href="/login">Login</a>
